# MultiAgent-Werewolf

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  MultiAgent-Werewolf-代码质量分析报告.md  README.md  README.zh-CN.md  README.zh-TW.md  dev.ps1  dev.sh  docker-compose.yml  mkdocs.yml  pyproject.toml  start-spectate.bat  stop-spectate.bat  项目评分报告.md
.claude/commands/: handoff.md  log-why.md  start-task.md
.codex/: hooks.json
.cursor/rules/: teamvibe-commit-workflow.mdc  teamwork-decisions.mdc
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/agents/: update-repo.agent.md
.github/reports/: coverage.xml
.github/workflows/: auto_labeler.yml  auto_review_merge.yml  build_image.yml  build_release.yml  code-quality-check.yml  code_scan.yml  deploy.yml  docker.yml  pre-commit-updater.yml  release_drafter.yml  semantic-pull-request.yml  sync-kissie-lvyihan_test.yml  test.yml
.teamwork/: config.json
.tmp/: agent_teams_practice.docx
configs/: README.md  agentscope.yaml  demo.yaml  example.yaml  gaisf.yaml  gpt-5-chaos.yaml  human-6p-demo.yaml  human-mixed-deepseek.yaml  llm-12p-agentscope.yaml  llm-12p-deepseek.yaml  llm-12p-doubao.yaml  llm-12p-gemini-lite.yaml  llm-12p-kimi.yaml  llm-6p-deepseek.yaml  llm-6p-doubao.yaml  llm-6p-openai.yaml  llm-9p-doubao.yaml  observability.yaml  preset-bloodmoon-12.yaml  preset-chaos-12.yaml  preset-elder-council-11.yaml  preset-guard-knight-8.yaml  preset-lovers-9.yaml  preset-magic-raven-10.yaml  preset-thief-twilight-10.yaml  preset-wolf-parade-10.yaml  standard-12p.yaml  standard-16p.yaml  standard-4p.yaml  standard-6p.yaml  standard-8p.yaml
configs/archive/: README.md  demo-6.yaml  gpt-5-chaos.yaml  human-6p-demo.yaml  llm-6p-doubao.yaml  llm-6p-gemini.yaml  llm-9p-doubao.yaml  llm-9p-gemini.yaml
deploy/: nginx-frontend.conf
docker/: Dockerfile
docs/: 2026-05-25-human-llm-tui-change-summary.md  DOC_TEMPLATE.md  ENGINE_DRIVEN_SPECTATE.md  LOCAL_ONLY-serial-agent-calls.md  README.md  agentscope_thinking_warning_note.md  arch.md  architecture-improvement.md  deepseek_runtime_observation_20260525.md  discussion-phase-outputs.md  human_agent_diagnostic_report.md  project-master-plan.md  project-structure.md  prompt_role_strategy_diff.md  prompt_tuning.md  roadmap.md  token-cap-提速对比实验报告.md  werewolf_prompt_by_phase.md  前端规划.md  吕祎晗-修改记录.md  吕祎晗-发现问题.md  吕祎晗-测评模块设计.md  吕祎晗-评测模块优化设计.md  多Agent对局性能瓶颈与并发提速分析报告.md  工程架构重构计划.md  狼人杀-决策可靠性问题与修复方案.md  狼人杀对战测试-技能使用验证报告.md  真实对局测试清单.md  第二次round-trip消除-改动报告.md  第二次round-trip消除-真实对局AB实验报告.md  记忆板块开发记录-2026-05-26.md
docs/adr/: 0001-mixin-engine.md  0002-protocols-over-abc.md  0004-offline-game-correctness-evaluation.md  0005-night-skill-scheduler.md  README.md
docs/agent_team/: DESIGN.md  README.md  ROADMAP.md
docs/architecture/: prompt_tuning.md  信念矩阵功能设计.md  吕祎晗-提示词版本与变量设计.md  工程架构重构计划.md  工程结构整理方案.md
docs/archive/: AI狼人杀项目耦合设计书_简易版.md  CHANGELOG.md  LOCAL_ONLY-serial-agent-calls.md  README.md  README.zh-CN.md  README.zh-TW.md  architecture-improvement.md  discussion-phase-outputs.md  project-governance.md  project-master-plan.md  project-structure.md  prompt_role_strategy_diff.md  roadmap.md  rule.md  werewolf_prompt_by_phase.md  workflow.md  前端规划.md  吕祎晗-OpenAI接口与可删除性分析.md  吕祎晗-修改记录.md  吕祎晗-发现问题.md
docs/evaluation/: DESIGN.md  Leaderboard与AB对比说明.md  PostGame产物地图.md  README.md  ROADMAP.md  evolution_artifacts.md  review-dashboard.html  role_card_migration_report.md  task_for_mimo.md  反事实推演说明.md  吕祎晗-评测模块优化设计.md  狼人杀对战测试-技能使用验证报告.md  自进化闭环协议.md  评分标准对照自评.md
docs/frontend/: AUDIO_SPEC.md  AUDIO_TODO.md  DESIGN.md  DEV.md  LIVE_CUE_ANIMATION.md  README.md  ROADMAP.md
docs/game_runtime/: DESIGN.md  README.md  ROADMAP.md
docs/interface/: DESIGN.md  PROVIDERS.md  README.md  ROADMAP.md
docs/memory/: RuntimeMemoryManager与Coach分层说明.md  llm_compressor_重试与降级修复说明.md  记忆板块开发记录-2026-05-25.md  记忆板块开发记录-2026-05-26.md
docs/observability/: DESIGN.md  README.md  ROADMAP.md
docs/reports/: audio-integration-verification-2026-06-09.md  frontend-planning-draft.md  frontend-planning-test2.md  frontend-planning.md  seat-ui-redesign-verification-2026-06-08.md  token-cap-提速对比实验报告.md  人机对战与命令行模式.md  人机混战信息隔离与交互修复.md  前后端打通与人机对战-2026-06-06.md  前端联调问题修复记录-2026-06-07.md  多Agent协作满分补强-上下文链路审查.md  多Agent对局性能瓶颈与并发提速分析报告.md  工程代码质量修复总体计划.md  工程代码质量修复记录-2026-06-04.md  投票意向并行实施与实验报告.md  狼人杀-决策可靠性问题与修复方案.md  监控预警现状与不足分析.md  第二次round-trip消除-改动报告.md  第二次round-trip消除-真实对局AB实验报告.md
docs/strategy/: DESIGN.md  README.md  ROADMAP.md
docs/ui/: DESIGN.md  README.md  ROADMAP.md
docs/对局速度优化/: 投票意向并行实施与实验报告.md
frontend/: .dockerignore  .env.development  .gitignore  CODE_REVIEW.md  Dockerfile  README.md  eslint.config.js  index.html  metadata.json  nginx.conf  package-lock.json  package.json  patch.cjs  server.ts  test_selector.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  Router.tsx  index.css  store.humanInput.test.ts  store.test.ts  store.ts  types.test.ts  types.ts
runs_timing/: after.events.jsonl  after.json  before.events.jsonl  before.json
scripts/: README_backfill.md  backfill_run_artifacts.py  benchmark_vote_intention_parallelism.py  bootstrap_role_prompt_packages.py  build_plans_yaml.py  check-env.ps1  check-env.sh  curate_initial_skills.py  gen_docs.py  mark-serial-local-only.sh  probe_provider_rate_limits.py  prune_skill_versions.py  rollback_helper.py  run_6p_doubao_utf8.ps1  run_ab_test_v1_vs_v2.py  run_game_with_replay.py  run_real_provider_ab_experiment.py  sync-lvyihan_test-to-kissie.sh  test_ark_connectivity.py  timed_game.py  unmark-serial-local-only.sh
src/llm_werewolf/: __init__.py  cli.py  eval_cli.py  paths.py  tui.py  vote_swing_cli.py
tests/adapter/: test_agent.py  test_agent_fallback.py  test_bootstrap.py  test_bridge.py  test_factory_configure.py  test_message.py  test_message_router.py  test_prompt_manager.py  test_prompts.py  test_structured_invoke.py  test_visibility.py
(+1079 files in other folders)
